<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.ExportActivity">

        <RadioGroup
            android:id="@+id/exportSettingsRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <RadioButton
                android:id="@+id/exportBtnSinglePDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/exportSettingsRadioButtonOne"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/exportBtnAllPDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exportSettingsRadioButtonTwo"
                android:textSize="20sp" />
        </RadioGroup>

    <TextView
        android:id="@+id/exportSettingsFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/exportSettingsFrom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/exportSettingsRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/exportSettingsRadioGroup"/>

    <EditText
        android:id="@+id/exportSettingsFromET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/exportSettingsFromHint"
        app:layout_constraintBottom_toBottomOf="@+id/exportSettingsFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exportSettingsFrom"
        app:layout_constraintTop_toTopOf="@+id/exportSettingsFrom"
        android:autofillHints="" />


    <TextView
        android:id="@+id/exportSettingsUntil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exportSettingsUntil"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/exportSettingsFrom"
        app:layout_constraintTop_toBottomOf="@id/exportSettingsFrom"
        />

    <EditText
        android:id="@+id/exportSettingsUntilET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/exportSettingsUntilHint"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@id/exportSettingsUntil"
        app:layout_constraintStart_toStartOf="@id/exportSettingsFromET"
        app:layout_constraintEnd_toEndOf="@id/exportSettingsFromET"
        app:layout_constraintTop_toTopOf="@id/exportSettingsUntil" />


    <CheckBox
        android:id="@+id/exportCheckBoxWholeBusinessYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/checkBoxWholeBusinessYear"
        app:layout_constraintStart_toStartOf="@id/exportSettingsUntil"
        app:layout_constraintTop_toBottomOf="@id/exportSettingsUntil"/>


    <TextView
        android:id="@+id/exportSettingsYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/yearExportSettingsBusinessYearHint"
        app:layout_constraintStart_toEndOf="@id/exportCheckBoxWholeBusinessYear"
        app:layout_constraintTop_toTopOf="@id/exportCheckBoxWholeBusinessYear"
        app:layout_constraintBottom_toBottomOf="@id/exportCheckBoxWholeBusinessYear"
        />

    <TextView
        android:id="@+id/exportReceiptCountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="0 Belege ausgewählt"
        app:layout_constraintStart_toStartOf="@id/exportCheckBoxWholeBusinessYear"
        app:layout_constraintTop_toBottomOf="@id/exportCheckBoxWholeBusinessYear"/>


    <ImageButton
        android:id="@+id/exportButtonExport"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/exportProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/exportButtonExport"
        app:layout_constraintEnd_toStartOf="@id/exportButtonExport" />


</androidx.constraintlayout.widget.ConstraintLayout>