<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.DashboardActivity">


        <Spinner
            android:id="@+id/dashboardMonthSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/months"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@+id/dashboardYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dashboardYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/dashboardYearHint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dashboardMonthSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dashboardMonthSpinner" />

        <TextView
            android:id="@+id/dashboardScansText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/dashboardScansText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboardMonthSpinner" />

        <TextView
            android:id="@+id/dashboardAmountScans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dashboardAmountScansHint"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dashboardScansText" />


        <TextView
            android:id="@+id/dashboardSumPerCategoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/dashboardSumAndAmountOfCategoryText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/dashboardScansText"
            app:layout_constraintTop_toBottomOf="@+id/dashboardAmountScans" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/activity_main_piechart"
            android:layout_width="250dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dashboardSumPerCategoryText" />


        <ImageButton
            android:id="@+id/dashboardBtnTakePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_camera"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@id/dashboardBtnShowGallery"
            app:layout_constraintEnd_toStartOf="@id/dashboardBtnShowGallery" />

        <ImageButton
            android:id="@+id/dashboardBtnShowGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_image_search"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/dashboardProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/dashboardBtnTakePicture"
            app:layout_constraintEnd_toStartOf="@id/dashboardBtnTakePicture" />


</androidx.constraintlayout.widget.ConstraintLayout>
